Cleaned up and added audio.

--- a/iFocus.wdgt/Info.plist
+++ b/iFocus.wdgt/Info.plist
@@ -21,7 +21,7 @@
 	<key>Height</key>
 	<string>118</string>
 	<key>AllowSystem</key>
-	<false/>
+	<true/>
 	<key>AllowNetworkAccess</key>
 	<true/>
 	<key>AllowInternetPlugins</key>
